WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84506
[chromium] WebFilterOperations API does not compile or dynamically link
https://bugs.webkit.org/show_bug.cgi?id=84506
Summary
[chromium] WebFilterOperations API does not compile or dynamically link
Dana Jansens
Reported
2012-04-20 16:03:12 PDT
[chromium] Fix API for WebFilterOperations
Attachments
Patch
(3.18 KB, patch)
2012-04-20 16:04 PDT
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
Patch
(3.15 KB, patch)
2012-04-20 16:08 PDT
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
Patch
(3.62 KB, patch)
2012-04-20 16:32 PDT
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Dana Jansens
Comment 1
2012-04-20 16:04:01 PDT
Created
attachment 138184
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-20 16:06:26 PDT
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
WebKit Review Bot
Comment 3
2012-04-20 16:06:51 PDT
Attachment 138184
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/Platform/ChangeLog', u'Source/Platf..." exit_code: 1 Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dana Jansens
Comment 4
2012-04-20 16:08:44 PDT
Created
attachment 138185
[details]
Patch
James Robinson
Comment 5
2012-04-20 16:23:42 PDT
Comment on
attachment 138185
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=138185&action=review
> Source/Platform/ChangeLog:3 > + [chromium] Fix API for WebFilterOperations
this isn't a terribly useful title - maybe say something about what you're exporting?
Dana Jansens
Comment 6
2012-04-20 16:32:04 PDT
Created
attachment 138192
[details]
Patch true say, fixed.
Dana Jansens
Comment 7
2012-04-20 17:23:05 PDT
Comment on
attachment 138192
[details]
Patch Clearing flags on attachment: 138192 Committed
r114807
: <
http://trac.webkit.org/changeset/114807
>
Dana Jansens
Comment 8
2012-04-20 17:23:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug