[chromium] WebFilterOperations API does not compile or dynamically link https://bugs.webkit.org/show_bug.cgi?id=84506

Reviewed by James Robinson.

Non-inline functions need WEBKIT_EXPORT in their declarations,
and the type used in the WebPrivateOwnPtr needs to be forward-
declared even when WEBKIT_IMPLEMENTATION is not defined.

Source/Platform:

* chromium/public/WebFilterOperations.h:
(WebKit::WebFilterOperations::WebFilterOperations):
(WebFilterOperations):

Source/WebCore:

* platform/chromium/support/WebFilterOperations.cpp:
(WebKit::WebFilterOperations::initialize):

git-svn-id: svn://svn.chromium.org/blink/trunk@114807 bbb929c8-8fbe-4397-9dbb-9b2b20218538