third_party/WebKit/Source/Platform/chromium/public/WebFilterOperations.h
@@ -30,11 +30,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "WebCommon.h"
 #include "WebPrivateOwnPtr.h"
 
-#if WEBKIT_IMPLEMENTATION
 namespace WebCore {
 class FilterOperations;
 }
-#endif
 
 namespace WebKit {
 struct WebFilterOperation;
@@ -42,18 +40,20 @@ struct WebFilterOperation;
 // An ordered set of filter operations.
 class WebFilterOperations {
 public:
-    WebFilterOperations();
+    WebFilterOperations() { initialize(); }
 
-    void append(const WebFilterOperation&);
+    WEBKIT_EXPORT void append(const WebFilterOperation&);
 
     // Removes all filter operations.
-    void clear();
+    WEBKIT_EXPORT void clear();
 
 #if WEBKIT_IMPLEMENTATION
     const WebCore::FilterOperations& toFilterOperations() const;
 #endif
 
 private:
+    WEBKIT_EXPORT void initialize();
+
     WebPrivateOwnPtr<WebCore::FilterOperations> m_private;
 };
 
