third_party/WebKit/Source/WebCore/platform/chromium/support/WebFilterOperations.cpp
@@ -36,7 +36,7 @@ using namespace WebCore;
 
 namespace WebKit {
 
-WebFilterOperations::WebFilterOperations()
+void WebFilterOperations::initialize()
 {
     m_private.reset(new FilterOperations());
 }
